<resources>
    <string name="app_name">Moovly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create account</string>

    <!-- Login Activity -->
    <string name="error">Error</string>
    <string name="account_created">Account Created</string>
    <string name="result_header">Your account has been created!</string>
    <string name="result_screen_btn">Get Started!</string>

</resources>